<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">舌尖上的天津</string>
    <string name="confirm">确定</string>
    <string name="action_login">登陆</string>
    <string name="action_register">注册</string>
    <string name="action_back">返回</string>
    <string name="action_exit">退出</string>
    <string name="title_search_hint">请输入关键字查询</string>
    <string name="textViewUsername">用户名</string>
    <string name="textViewPassword">密码</string>
    <string name="textViewPhone">电话</string>
    <string name="btnLogin">登陆</string>
    <string name="btnRegister">注册</string>
</resources>